--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Normalbutton from "../components/Normalbutton.astro";
+import Banner from "../components/Banner.astro";
 import "../style/style.css";
 ---
 
@@ -15,6 +16,7 @@ import "../style/style.css";
     <h1>Astro</h1>
     <Normalbutton variant="primary">BUY YOUR TICKET HERE</Normalbutton>
     <Normalbutton variant="secondary">SEND</Normalbutton>
+    <Banner />
   </body>
 </html>
 
