--- a/src/components/Ticketbutton.astro
+++ b/src/components/Ticketbutton.astro
@@ -1,4 +1,25 @@
 ---
 ---
 
-<style></style>
+<button>Tickets</button>
+
+<style>
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 17px 21px 17px 21px;
+    background-color: #c86b25;
+    color: #fff8ee;
+    border: none;
+    border-radius: 5%;
+    height: 30px;
+    width: 100px;
+    margin-right: 20px;
+    font-size: 18px;
+    font-family: Montserrat;
+  }
+  button:hover {
+    transform: scale(1.2);
+  }
+</style>
