--- a/src/components/Ticketbutton.astro
+++ b/src/components/Ticketbutton.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<button>Tickets</button>
+<button>TICKETS</button>
 
 <style>
   button {
@@ -12,7 +12,7 @@
     background-color: #c86b25;
     color: #fff8ee;
     border: none;
-    border-radius: 5%;
+    /* border-radius: 5%; */
     height: 30px;
     width: 100px;
     margin-right: 20px;
