--- a/src/components/Metahead.astro
+++ b/src/components/Metahead.astro
@@ -1,4 +1,5 @@
 ---
+const title = Astro.props.title;
 ---
 
 <html lang="en">
@@ -7,10 +8,9 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{title}</title>
   </head>
-
-  <slot />
-
-
+  <body>
+    <slot />
+  </body>
 </html>
