test-rettet-txt-ny-update-ama

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -6,25 +6,25 @@
     • tickets are out now • tickets are out now • tickets are out now • tickets
     are out now • tickets are out now • tickets are out now • tickets are out
     now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are
+    tickets are out now • tickets are out now
   </h2>
   <h2>
     • tickets are out now • tickets are out now • tickets are out now • tickets
     are out now • tickets are out now • tickets are out now • tickets are out
     now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are
+    tickets are out now • tickets are out now
   </h2>
   <h2>
     • tickets are out now • tickets are out now • tickets are out now • tickets
     are out now • tickets are out now • tickets are out now • tickets are out
     now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are
+    tickets are out now • tickets are out now
   </h2>
   <h2>
     • tickets are out now • tickets are out now • tickets are out now • tickets
     are out now • tickets are out now • tickets are out now • tickets are out
     now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are
+    tickets are out now • tickets are out now
   </h2>
 </div>
 
