--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -3,28 +3,16 @@
 
 <div class="text-wrapper">
   <h2>
-    • tickets are out now • tickets are out now • tickets are out now • tickets
-    are out now • tickets are out now • tickets are out now • tickets are out
-    now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are out now
+    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN   
   </h2>
   <h2>
-    • tickets are out now • tickets are out now • tickets are out now • tickets
-    are out now • tickets are out now • tickets are out now • tickets are out
-    now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are out now
+    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN 
   </h2>
   <h2>
-    • tickets are out now • tickets are out now • tickets are out now • tickets
-    are out now • tickets are out now • tickets are out now • tickets are out
-    now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are out now
+    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN 
   </h2>
   <h2>
-    • tickets are out now • tickets are out now • tickets are out now • tickets
-    are out now • tickets are out now • tickets are out now • tickets are out
-    now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are out now
+    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN 
   </h2>
 </div>
 
@@ -32,7 +20,7 @@
   * {
     margin: 0;
     box-sizing: border-box;
-    font-family: Montserrat, Helvicta, sans-serif;
+    
   }
 
   .text-wrapper {
@@ -40,10 +28,12 @@
     justify-content: flex-start;
     background-color: #a3cafd;
     overflow: hidden;
+    
   }
 
   h2 {
     /* font-size: 2rem; */
+    font-family: var(--font-head);
     font-size: 1rem;
     font-weight: 700;
     text-transform: uppercase;
