--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import Normalbutton from "../components/Normalbutton.astro";
+import Banner from "../components/Banner.astro";
 import "../style/style.css";
 ---
 
