--- a/src/pages/temp.astro
+++ b/src/pages/temp.astro
@@ -1,7 +1,14 @@
 ---
+import { createClient } from "@supabase/supabase-js";
 import Artistcard from "../components/Artistcard.astro";
 import Footer from "../components/Footer.astro";
 import "../style/style.css";
+
+const supabaseUrl = "https://lknjocuybcipxwdjwhuf.supabase.co";
+const supabaseKey = import.meta.env.SUPABASE;
+const supabase = createClient(supabaseUrl, supabaseKey);
+
+let { data } = await supabase.from("Kune_artist").select("*");
 ---
 
 <html lang="en">
@@ -13,7 +20,20 @@ import "../style/style.css";
     <title>Astro</title>
   </head>
   <body>
-    <Artistcard />
+    <main id="content">
+      {
+        (data || []).map(({ name, country, stageimage, genre, image }) => (
+          <Artistcard
+            name={name}
+            country={country}
+            icon={stageimage}
+            genre={genre}
+            bg={image}
+          />
+        ))
+      }
+    </main>
+
     <Footer />
   </body>
 </html>
@@ -21,5 +41,14 @@ import "../style/style.css";
 <style>
   body {
     background-color: var(--colour-background);
+  }
+
+  #content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+    max-width: 1300px;
+    margin: 0 auto;
   }
 </style>
