about volunteer done done

--- a/src/components/Aboutvolunteerbutton.astro
+++ b/src/components/Aboutvolunteerbutton.astro
@@ -1,21 +1,21 @@
 ---
-
 ---
 
 <button>
-    <slot />
-  </button>
+  <slot />
+</button>
 
 <style>
-button {
+  button {
     border-style: solid;
+    border-width: 1px;
     border-color: var(--colour-text);
     padding: 17px 21px 17px 21px;
     background-color: transparent;
     color: var(--colour-text);
   }
-button:hover {
-    background-color:var(--colour-text);
+  button:hover {
+    background-color: var(--colour-text);
     color: var(--colour-background);
   }
 </style>
