normalbutton done done done

--- a/src/components/Normalbutton.Astro
+++ b/src/components/Normalbutton.Astro
@@ -10,6 +10,7 @@ const { variant } = Astro.props;
 <style>
   .primary {
     border-style: solid;
+    border-width: 1px;
     border-color: #fff8ee;
     padding: 17px 21px 17px 21px;
     background-color: transparent;
@@ -20,7 +21,9 @@ const { variant } = Astro.props;
     border-color: #c86b25;
   }
   .secondary {
+    /* border: 1px solid #c86b25; */
     border-style: solid;
+    border-width: 1px;
     border-color: #c86b25;
     padding: 17px 21px 17px 21px;
     background-color: transparent;
