reconnected and style.css added

--- a/src/pages/community.astro
+++ b/src/pages/community.astro
@@ -1,4 +1,5 @@
 ---
+import "../style/style.css";
 import Metahead from "../components/Metahead.astro";
 ---
 
@@ -6,4 +7,8 @@ import Metahead from "../components/Metahead.astro";
   <h1>Community</h1>
 </Metahead>
 
-<style></style>
+<style>
+  h1 {
+    color: hotpink;
+  }
+</style>
