--- a/src/pages/community.astro
+++ b/src/pages/community.astro
@@ -1,14 +1,28 @@
 ---
 import "../style/style.css";
 import Metahead from "../components/Metahead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import Banner from "../components/Banner.astro";
 ---
 
 <Metahead title="Community">
-  <h1>Community</h1>
+  <Header />
+  <main>
+    <Banner />
+    <section id="header_about">
+      <h1>COMMUNITY</h1>
+      <h3>Embrace the Otherness</h3>
+    </section>
+  </main>
+  <Footer />
 </Metahead>
 
 <style>
-  h1 {
-    color: hotpink;
+  #header_about {
+    background-image: url("../images/community_image.webp");
+    background-size: cover;
+    width: 100%;
+    height: 450px;
   }
 </style>
