rettet til vores custom properties

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -3,16 +3,28 @@
 
 <div class="text-wrapper">
   <h2>
-    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN   
+    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19
+    - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023
+    • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 •
+    UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN
   </h2>
   <h2>
-    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN 
+    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19
+    - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023
+    • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 •
+    UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN
   </h2>
   <h2>
-    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN 
+    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19
+    - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023
+    • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 •
+    UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN
   </h2>
   <h2>
-    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN 
+    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19
+    - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023
+    • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 •
+    UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN
   </h2>
 </div>
 
@@ -20,15 +32,13 @@
   * {
     margin: 0;
     box-sizing: border-box;
-    
   }
 
   .text-wrapper {
     display: flex;
     justify-content: flex-start;
-    background-color: #a3cafd;
+    background-color: var(--colour-base);
     overflow: hidden;
-    
   }
 
   h2 {
@@ -37,9 +47,9 @@
     font-size: 1rem;
     font-weight: 700;
     text-transform: uppercase;
-    color: #282323;
+    color: var(--colour-background);
     white-space: nowrap;
-    padding: 0;
+    padding: 0.2rem;
     margin: 0.5rem;
     letter-spacing: 1px;
     animation: move_banner 45s linear infinite;
