skiftet font til mont

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -3,28 +3,28 @@
 
 <div class="text-wrapper">
   <h2>
-    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19
-    - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023
-    • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 •
-    UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN
+    • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19
+    - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023
+    • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 •
+    UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN
   </h2>
   <h2>
-    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19
-    - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023
-    • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 •
-    UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN
+    • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19
+    - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023
+    • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 •
+    UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN
   </h2>
   <h2>
-    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19
-    - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023
-    • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 •
-    UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN
+    • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19
+    - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023
+    • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 •
+    UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN
   </h2>
   <h2>
-    • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19
-    - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023
-    • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 •
-    UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN • JULY 19 - 23 2023 • UNGDOMS0EN
+    • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19
+    - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023
+    • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 •
+    UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN • JULY 19 - 23 2023 • UNGDOMSØEN
   </h2>
 </div>
 
@@ -42,10 +42,9 @@
   }
 
   h2 {
-    /* font-size: 2rem; */
-    font-family: var(--font-head);
+    font-family: var(--font-main);
     font-size: 1rem;
-    font-weight: 700;
+    font-weight: 800;
     text-transform: uppercase;
     color: var(--colour-background);
     white-space: nowrap;
