mislykket forsøg på ændre placeholder farve

--- a/src/components/Volunteerform.astro
+++ b/src/components/Volunteerform.astro
@@ -53,10 +53,11 @@ import Normalbutton from "./Normalbutton.astro";
     border-radius: 0.125rem;
   }
 
-  /* ::placerholder {
+  ::placeholder {
     font-weight: 400;
     font-size: 26px;
-  } */
+    color: var(--colour-background);
+  }
   .box-line {
     margin: 2rem auto;
     border: 0.125rem solid #fff8ee;
